# dataone-gse

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  values.yaml
charts/argo/argo-workflows/: values.yaml
deployment/argo/: ice-basins-pv.yaml  ice_basins_workflow.yaml
gse-workflows/: ice-basins-pvc.yaml  ice_basins_workflow.yaml
gse-workflows/data/: Ice_Basins.gpkg
helm/: Chart.yaml  README.md  values.yaml
helm/admin/: secrets.yaml  workflow-pv.yaml  workflow-pvc.yaml
helm/examples/: debug_pod.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
scripts/workflows/: ice_basins_workflow.py  sample.py
src/app/: main.py
src/app/api/v1/: workflows.py
